syntax = "proto3";
// sys_user 用户
package user;
option go_package = "cloud/service/sys/user;user";
import "google/protobuf/timestamp.proto";
import "pagination.proto";

// SysUserObject 数据对象
message SysUserObject {
	// @inject_tag: gorm:"primaryKey;autoIncrement;column:id" json:"id"
	optional int64 id = 1; //编号
	// @inject_tag: gorm:"column:name" json:"name"
	optional string name = 2; //姓名
	// @inject_tag: gorm:"column:mobile" json:"mobile"
	optional string mobile = 3; //手机号码
	// @inject_tag: gorm:"column:username" json:"username"
	optional string username = 4; //用户名
	// @inject_tag: gorm:"column:password" json:"password"
	optional string password = 5; //密码
	// @inject_tag: gorm:"column:status" json:"status"
	optional int32 status = 6; //状态:0正常/1停用
	// @inject_tag: gorm:"column:deleted" json:"deleted"
	optional int32 deleted = 7; //删除:0否/1是
	// @inject_tag: gorm:"column:tenant_id" json:"tenantId"
	optional int64 tenant_id = 8; //租户
	// @inject_tag: gorm:"column:creator" json:"creator"
	optional string creator = 9; //创建人
	// @inject_tag: gorm:"column:create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 10; //创建时间
	// @inject_tag: gorm:"column:updater" json:"updater"
	optional string updater = 11; //更新人
	// @inject_tag: gorm:"column:update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 12; //更新时间
}
// SysUserTotalResponse 列表数据总量
message SysUserTotalResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SysUserCreateRequest 创建数据请求
message SysUserCreateRequest {
	SysUserObject data = 1;
}
// SysUserCreateResponse 创建数据响应
message SysUserCreateResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SysUserUpdateRequest 更新数据请求
message SysUserUpdateRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
	SysUserObject data = 2;
}
// SysUserUpdateResponse 更新数据响应
message SysUserUpdateResponse {
	int64 code = 1;
	string msg = 2;
}
// SysUserDeleteRequest 删除数据请求
message SysUserDeleteRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
}
// SysUserDeleteResponse 删除数据响应
message SysUserDeleteResponse {
	int64 code = 1;
	string msg = 2;
}
// SysUserRequest 查询单条数据请求
message SysUserRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
}
// SysUserResponse 查询单条数据响应
message SysUserResponse {
	int64 code = 1;
	string msg = 2;
	SysUserObject data = 3;
}
// SysUserRecoverRequest 恢复数据请求
message SysUserRecoverRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
}
// SysUserRecoverResponse 删除数据响应
message SysUserRecoverResponse {
	int64 code = 1;
	string msg = 2;
}
// SysUserDropRequest 清理数据请求
message SysUserDropRequest {
	// @inject_tag: gorm:"column:id" json:"id"
	int64 id = 1; //编号
}
// SysUserDropResponse 清理数据响应
message SysUserDropResponse {
	int64 code = 1;
	string msg = 2;
}
// SysUserLoginRequest 查询单条数据请求
message SysUserLoginRequest {
	
	// @inject_tag: db:"username" json:"username"
	optional string username = 1; // 用户名

}
// SysUserLoginResponse 查询单条数据响应
message SysUserLoginResponse {
	int64 code = 1;
	string msg = 2;
	SysUserObject data = 3;
}
// SysUserListRequest 列表数据
message SysUserListRequest {
	
	// @inject_tag: db:"username" json:"username"
	optional string username = 1; // 用户名
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 2; // 租户
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 3; // 删除:0否/1是
	// @inject_tag: db:"status" json:"status"
	optional int32 status = 4; // 状态:0正常/1停用
	// @inject_tag: db:"mobile" json:"mobile"
	optional string mobile = 5; // 手机号码
	// @inject_tag: db:"name" json:"name"
	optional string name = 6; // 姓名

	// @inject_tag: json:"pagination"
	optional pagination.PaginationRequest pagination = 7; // 分页
}

// SysUserListResponse 数据响应
message SysUserListResponse {
	int64 code = 1;
  	string msg = 2;
	repeated SysUserObject data = 3;
}
// SysUserListTotalRequest 列表数据
message SysUserListTotalRequest {
	
	// @inject_tag: db:"username" json:"username"
	optional string username = 1; // 用户名
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 2; // 租户
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 3; // 删除:0否/1是
	// @inject_tag: db:"status" json:"status"
	optional int32 status = 4; // 状态:0正常/1停用
	// @inject_tag: db:"mobile" json:"mobile"
	optional string mobile = 5; // 手机号码
	// @inject_tag: db:"name" json:"name"
	optional string name = 6; // 姓名

}


// SysUserService 服务
service SysUserService{
	rpc SysUserCreate(SysUserCreateRequest) returns (SysUserCreateResponse);
	rpc SysUserUpdate(SysUserUpdateRequest) returns (SysUserUpdateResponse);
	rpc SysUserDelete(SysUserDeleteRequest) returns (SysUserDeleteResponse);
	rpc SysUser(SysUserRequest) returns (SysUserResponse);
	rpc SysUserRecover(SysUserRecoverRequest) returns (SysUserRecoverResponse);
	rpc SysUserDrop(SysUserDropRequest) returns (SysUserDropResponse);
	rpc SysUserLogin(SysUserLoginRequest) returns (SysUserLoginResponse);
	rpc SysUserList(SysUserListRequest) returns (SysUserListResponse);
	rpc SysUserListTotal(SysUserListTotalRequest) returns (SysUserTotalResponse);
}